--- a/main.html
+++ b/main.html
@@ -7,9 +7,57 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h1>My playlist</h1>
+
+    <div class="player_one">
+      <ul type="none">
+        <li>
+          <a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank"
+            >Song 1</a
+          >
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=9iIX4PBplAY " target="_blank"
+            >Song 2</a
+          >
+        </li>
+
+        <li>
+          <a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank"
+            >Song 3</a
+          >
+        </li>
+
+        <li>
+          <a href="https://www.youtube.com/watch?v=puKD3nkB1h4 " target="_blank"
+            >Song 4</a
+          >
+        </li>
+
+        <li>
+          <a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank"
+            >Song 5</a
+          >
+        </li>
+      </ul>
+    </div>
+
+    <h1>Now playing..</h1>
+
+    <div class="player_two">
+      <video  controls>
+
+        <source src="https://www.w3schools.com/tags/movie.mp4" >
+      </video>
+      <h1>MP3 Songs</h1>
+      <p>Maan Meri Jaan</p>
+      <audio
+        
+        controls>
+        <source  src="https://www.pagalworld.com.se/files/download/id/64630">
+        Maan Meri Jaan
+      </audio>
+    </div>
 
 </body>
 
