--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>My playlist</h1>
+	<h2>My Playlist</h2>
 
     <div class="player_one">
       <ul type="none">
@@ -45,19 +45,21 @@
     <h1>Now playing..</h1>
 
     <div class="player_two">
-      <video  controls>
-
-        <source src="https://www.w3schools.com/tags/movie.mp4" >
+      <video controls>
+        <source
+          src="https://www.w3schools.com/tags/movie.mp4"
+          type="video/mp4" />
       </video>
-      <h1>MP3 Songs</h1>
+      <h2>MP3 Songs</h2>
       <p>Maan Meri Jaan</p>
-      <audio
-        
-        controls>
-        <source  src="https://www.pagalworld.com.se/files/download/id/64630">
+      <audio controls>
+        <source
+          src="https://www.pagalworld.com.se/files/download/id/64630"
+          type="audio/mp4" />
         Maan Meri Jaan
       </audio>
     </div>
+   
 
 </body>
 
