--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
       </ul>
     </div>
 
-    <h2>Now playing...</h2>
+    <h2>Now Playing...</h2>
 
     <div class="player_two">
       <video controls>
