--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
           src="https://www.w3schools.com/tags/movie.mp4"
           type="video/mp4" />
       </video>
-      <h2>MP3 Songs</h2>
+      <h2>MP3 songs</h2>
       <p>Maan Meri Jaan</p>
       <audio controls>
         <source
